--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -15,41 +15,51 @@
 
 </head>
 
+
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>3. old english bulldog </h2>
-                <br>
-                <h3> Kind but courageous, friendly but dignified, the Bulldog is a thick-set, low-slung, well-muscled
-                    bruiser
-                    whose 'sourmug' face is the universal symbol of courage and tenacity. These docile, loyal companions
-                    adapt well to town or country</h3>
+                <h2>3. Olde english bulldog  </h2>
                 <br>
                 <br>
 
-                <h6>Image Description: A old english bulldog looking at the camera.</h6>
+                Friendly and gentle with kids. Protector of our balcony. Playful yet submissive, especially with smaller
+                dogs. And the sweetest 100lb cuddle monster
+                <br>
+                <h6>Image Description: Old english bulldog
 
-                <div class="col-6">
-                    <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
-                </div>
+                </h6>
+                <br>
 
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page4.html"><img class="img-fluid"
                                     src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../andrea/page4.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid"
                                     src="../assets/icons/icon-next.png" alt="nextBtn"></a>
+
                         </div>
                     </div>
                 </div>
+
             </div>
+
+            <div class="col-6">
+                <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bernard">
+            </div>
+
         </div>
+
     </div>
+
+
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
