--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -22,40 +22,44 @@
             <div class="col-6">
                 <h2>7. Queensland heeler </h2>
                 <br>
-                <h3>
+                <br>
 
-                    Image result for queensland heeler facts
-                    The blue heeler is known as hard-working, intelligent, and loyal to its owner. Historically, these
-                    dogs were bred to work on farms as herders, and they still thrive when they have a job to do. Their
-                    fierce loyalty makes them even better workers</h3>
+                Australian Cattle Dogs can be good family dogs, and can be raised with children. They are playful and
+                will enjoy the high-energy companionship of children. However, given the breed's propensity to nip and
+                herd, they should be supervised when around young children
+
                 <br>
-                <h6>Image Description: Queensland Heeler stand on a rock looking over </h6>
+                <h6>Image Description: Queensland heeler
+
+                </h6>
                 <br>
+
+                <div class="navRow">
+                    <div class="navRow row">
+                        <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-back.png" alt="backBtn"></a>
+                        </div>
+                        <div class="col-4"><a href="../index.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-home.png" alt="homeBtn"></a>
+                        </div>
+                        <div class="col-4"><a href="../andrea/page8.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-next.png" alt="nextBtn"></a>
+
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
             <div class="col-6">
-                <img src="../assets/Photos-dogs/QUEENS.png" alt="Queensland Heeler stand on a rock looking over">
+                <img class="img-fluid" src="../assets/Photos-dogs/QUEENS.png" alt="Bernard">
             </div>
-
-
-    <div class="navRow">
-        <div class="navRow row">
-            <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
-                        alt="backBtn"></a>
-            </div>
-            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
-                        alt="homeBtn"></a>
-            </div>
-            <div class="col-4"><a href="../andrea/page8.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
-                        alt="nextBtn"></a>
-
-            </div>
-        </div>
-    </div>
-    </div>
 
         </div>
+
+    </div>
+
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
