--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -21,16 +21,13 @@
         <div class="row">
             <div class="col-6">
                 <h2>3. Olde english bulldog  </h2>
-                <br>
-                <br>
-
-                Friendly and gentle with kids. Protector of our balcony. Playful yet submissive, especially with smaller
+                
+               <h3> Friendly and gentle with kids. Protector of our balcony. Playful yet submissive, especially with smaller
                 dogs. And the sweetest 100lb cuddle monster
-                <br>
+                </h3>
                 <h6>Image Description: Old english bulldog
-
                 </h6>
-                <br>
+                
 
                 <div class="navRow">
                     <div class="navRow row">
