--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -21,14 +21,12 @@
         <div class="row">
             <div class="col-6">
                 <h2>7. Queensland heeler </h2>
-                <br>
-                <br>
-
-                Australian Cattle Dogs can be good family dogs, and can be raised with children. They are playful and
+                
+                <h3> Cattle Dogs can be good family dogs, and can be raised with children. They are playful and
                 will enjoy the high-energy companionship of children. However, given the breed's propensity to nip and
-                herd, they should be supervised when around young children
+                herd, they should be supervised when around young children </h3>
 
-                <br>
+                
                 <h6>Image Description: Queensland heeler
 
                 </h6>
