--- a/andrea/page4.html
+++ b/andrea/page4.html
@@ -10,7 +10,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <style>
-        @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
+        @import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap');
     </style>
 </head>
 
