--- a/andrea/page8.html
+++ b/andrea/page8.html
@@ -10,7 +10,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <style>
-        @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
+        @import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap');
     </style>
 </head>
 
@@ -32,9 +32,7 @@
                     States. They are well known to be powerful, protective, and loyal, famous for their instinct for
                     guarding. But Rottweilers are also easily trained, making them loyal, loving, and confident
                     guardians </h3>
-               
                 <h6>Image Description: Rottweilers standing in grass looking over </h6>
-               
                 <div class="navRow">
                     <div class="navRow row">
                         <div class="col-4"><a href="../andrea/page7.html"><img class="img-fluid"
