--- a/andrea/page6.html
+++ b/andrea/page6.html
@@ -10,8 +10,8 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <style>
-        @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-</style>
+        @import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap');
+    </style>
 </head>
 
 
