--- a/andrea/page4.html
+++ b/andrea/page4.html
@@ -28,8 +28,8 @@
                 <h3>
                     The Pembroke Welsh Corgi is known as one of the most agreeable of small house dogs and is a loyal,
                     loving pet for families. They also are known for their intelligence and enthusiasm for working. Many
-                    Pembrokes compete in dog sports, such as agility, herding, conformation, obedience, and more</h3>
-                <h6>Image Description: Blue corgi</h6>
+                    Pembrokes compete in dog sports, such as agility, herding, conformation, obedience, and more.</h3>
+                <h6>Image Description: Blue corgi.</h6>
                 <div class="navRow">
                     <div class="navRow row">
                         <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
