--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -20,14 +20,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>7. Queensland heeler </h2>
+                <h2>7. Queensland Heeler </h2>
                 
                 <h3> Cattle Dogs can be good family dogs, and can be raised with children. They are playful and
                 will enjoy the high-energy companionship of children. However, given the breed's propensity to nip and
-                herd, they should be supervised when around young children </h3>
+                herd, they should be supervised when around young children. </h3>
 
                 
-                <h6>Image Description: Queensland heeler
+                <h6>Image Description: Queensland heeler.
 
                 </h6>
                 <br>
