--- a/andrea/page8.html
+++ b/andrea/page8.html
@@ -31,8 +31,8 @@
                 <h3> Rottweilers, also known affectionately as Rotties, are one of the most popular dogs in the United
                     States. They are well known to be powerful, protective, and loyal, famous for their instinct for
                     guarding. But Rottweilers are also easily trained, making them loyal, loving, and confident
-                    guardians </h3>
-                <h6>Image Description: Rottweilers standing in grass looking over </h6>
+                    guardians. </h3>
+                <h6>Image Description: Rottweilers standing in grass looking over. </h6>
                 <div class="navRow">
                     <div class="navRow row">
                         <div class="col-4"><a href="../andrea/page7.html"><img class="img-fluid"
