--- a/andrea/page9.html
+++ b/andrea/page9.html
@@ -25,10 +25,9 @@
                     The German shepherd dog is a herding breed known for its courage, loyalty and guarding instincts.
                     This breed
                     makes an excellent guard dog, police dog, military dog, guide dog for the blind and search and
-                    rescue dog.
-                    For many families, the German shepherd is also a treasured family pet.</h3>
+                    rescue dog. For many families, the German shepherd is also a treasured family pet.</h3>
                 
-                <h6>Image Description: two german shepherds looking at camera with stic</h6>
+                <h6>Image Description: two german shepherds looking at camera with stick.</h6>
             </div>
             <div class="col-6">
                 <img src="../assets/Photos-dogs/GERMAN.png" alt=" two german shepherds looking at camera with stick ">
