--- a/andrea/page10.html
+++ b/andrea/page10.html
@@ -24,13 +24,13 @@
             </div>
             <!-- BOX -->
             <div class="col-6">
-                <h2>10.Husky</h2>
+                <h2>10. Husky</h2>
                 <h3>
                     Siberian huskies are probably best-known for their incredible sled-pulling skills, but these doggies
                     aren't all business! Indeed, they make excellent working dogs, as they were bred originally to help
                     the Chukchi people of Siberia hunt more efficiently. But they're sweet, friendly, and loyal cuddle
                     bugs, too.</h3>
-                <h6>Image Description: Husky laying in fall leaves </h6>
+                <h6>Image Description: Husky laying in fall leaves. </h6>
                 <div class="navRow">
                     <div class="navRow row">
                         <div class="col-4"><a href="../andrea/page9.html"><img class="img-fluid"
