--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -20,15 +20,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>3. Olde english bulldog  </h2>
-                
-               <h3> Friendly and gentle with kids. Protector of our balcony. Playful yet submissive, especially with smaller
-                dogs. And the sweetest 100lb cuddle monster
+                <h2>3. Olde English Bulldog  </h2>
+
+                <h3> Friendly and gentle with kids. Protector of our balcony. Playful yet submissive, especially with smaller
+                dogs. And the sweetest 100lb cuddle monster.
                 </h3>
-                <h6>Image Description: Old english bulldog
+                <h6>Image Description: Old english bulldog.
                 </h6>
                 
-
                 <div class="navRow">
                     <div class="navRow row">
                         <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid"
