--- a/andrea/page6.html
+++ b/andrea/page6.html
@@ -26,10 +26,12 @@
             <!-- BOX -->
             <div class="col-6">
                 <h2>6. Yorkie</h2>
-                
-                <h3>They are favorites of urbanites the world over. Yorkies are long-lived and hypoallergenic (the coat is more like human hair than animal fur), and they make fine little watchdogs. This is a true 'personality breed,' providing years of laughs, love, and close companionship</h3>
 
-                <h6>Image Description: Yorkie running in grass</h6>
+                <h3>They are favorites of urbanites the world over. Yorkies are long-lived and hypoallergenic (the coat
+                    is more like human hair than animal fur), and they make fine little watchdogs. This is a true
+                    'personality breed,' providing years of laughs, love, and close companionship. </h3>
+
+                <h6>Image Description: Yorkie running in grass.</h6>
 
                 <div class="navRow">
                     <div class="navRow row">
@@ -48,7 +50,7 @@
         </div>
     </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
